--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,4 @@ services:
     ports:
      - "80:80"
     volumes:
-     - "./volumes/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf"
+     - "~/git/all-settings/volumes/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf"
